# ObjectDetector

./: CMakeLists.txt
src/: detection_display.cpp  detection_display.h  main.cpp
